--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,15 @@ body {
   background-color: #f5f5f5;
   color: #4e4e4e;
 }
+#particles-js {
+  background-color: #f59d9d;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 0; /*Ensure it stays behind other content */
+}
 
 h1,
 h2,
