added particles.js + update text

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
   color: #4e4e4e;
 }
 #particles-js {
-  background-color: #f59d9d;
+  background-color: #870000;
   position: absolute;
   width: 100%;
   height: 100%;
